--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.2",
     "cross-env": "^7.0.2",
+    "markdown-it-prism": "^2.1.3",
+    "prismjs": "^1.22.0",
     "typescript": "^4.0.5",
     "vite": "^1.0.0-rc.9",
     "vite-plugin-md": "workspace:*"
