--- a/package.json
+++ b/package.json
@@ -26,22 +26,23 @@
     "release": "npx bumpp --commit --tag && npm publish && git push"
   },
   "peerDependencies": {
-    "@vue/compiler-sfc": "^3.0.2"
+    "vite": "2",
+    "@vue/compiler-sfc": "^3.0.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.4.3",
-    "@types/markdown-it": "^10.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@vue/compiler-sfc": "^3.0.3",
-    "eslint": "^7.14.0",
-    "rollup": "^2.34.0",
-    "standard-version": "^9.0.0",
-    "tsup": "^3.10.1",
-    "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13"
+    "@types/markdown-it": "^12.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@vue/compiler-sfc": "^3.0.5",
+    "eslint": "^7.17.0",
+    "rollup": "^2.35.1",
+    "standard-version": "^9.1.0",
+    "tsup": "^3.11.0",
+    "typescript": "^4.1.3",
+    "vite": "^2.0.0-beta.3"
   },
   "dependencies": {
     "gray-matter": "^4.0.2",
-    "markdown-it": "^12.0.2"
+    "markdown-it": "^12.0.4"
   }
 }
