feat: upgrade for Vite 2.0

--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.4.3",
     "@types/markdown-it": "^12.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@vue/compiler-sfc": "^3.0.5",
-    "eslint": "^7.17.0",
-    "rollup": "^2.36.1",
+    "eslint": "^7.20.0",
+    "rollup": "^2.39.0",
     "standard-version": "^9.1.0",
-    "tsup": "^3.11.0",
-    "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.10"
+    "tsup": "^3.12.1",
+    "typescript": "^4.1.5",
+    "vite": "^2.0.0"
   },
   "dependencies": {
     "gray-matter": "^4.0.2",
