--- a/example/package.json
+++ b/example/package.json
@@ -5,17 +5,17 @@
     "build": "cross-env DEBUG=vite-plugin-md:* vite build"
   },
   "dependencies": {
-    "@vueuse/head": "^0.2.1",
+    "@vueuse/head": "^0.2.3",
     "vue": "^3.0.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.0.4",
+    "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
     "cross-env": "^7.0.3",
     "markdown-it-prism": "^2.1.4",
     "prismjs": "^1.23.0",
-    "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.10",
+    "typescript": "^4.1.5",
+    "vite": "^2.0.0",
     "vite-plugin-md": "workspace:*"
   }
 }
