--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "@vueuse/head": "^0.2.3",
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.4",
@@ -16,6 +17,7 @@
     "prismjs": "^1.23.0",
     "typescript": "^4.1.5",
     "vite": "^2.0.0",
-    "vite-plugin-md": "workspace:*"
+    "vite-plugin-md": "workspace:*",
+    "vite-plugin-pages": "^0.4.3"
   }
 }
