--- a/example/package.json
+++ b/example/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "cross-env DEBUG=vite-plugin-md:* vite",
+    "dev": "nodemon --watch ../dist/index.js -x \" cross-env DEBUG=vite-plugin-md:* vite\"",
     "build": "cross-env DEBUG=vite-plugin-md:* vite build"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@vue/compiler-sfc": "^3.0.6",
     "cross-env": "^7.0.3",
     "markdown-it-prism": "^2.1.4",
+    "nodemon": "^2.0.7",
     "prismjs": "^1.23.0",
     "typescript": "^4.2.2",
     "vite": "^2.0.3",
