--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
-  "extends": "@antfu/eslint-config",
-  "rules": {
-    "@typescript-eslint/no-unused-vars": "off"
-  }
+  "extends": "@antfu",
+  "env": {
+    "jest": true
+  },
+  "plugins": ["jest"]
 }
