--- a/package.json
+++ b/package.json
@@ -1,52 +1,58 @@
 {
   "name": "vite-plugin-md",
-  "description": "Markdown for Vite",
   "version": "0.6.3",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/antfu/vite-plugin-md"
-  },
-  "homepage": "https://github.com/antfu/vite-plugin-md",
-  "bugs": "https://github.com/antfu/vite-plugin-md/issues",
-  "files": [
-    "dist"
-  ],
+  "description": "Markdown for Vite",
   "keywords": [
     "vite",
     "vite-plugin",
     "markdown-it"
   ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/antfu/vite-plugin-md"
+  },
+  "funding": "https://github.com/sponsors/antfu",
+  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "homepage": "https://github.com/antfu/vite-plugin-md",
+  "bugs": "https://github.com/antfu/vite-plugin-md/issues",
   "scripts": {
     "dev": "npm run build -- --watch",
     "example:dev": "cp README.md example/README.md && npm -C example run dev",
     "example:build": "cp README.md example/README.md && npm -C example run build",
     "build": "tsup src/index.ts --dts --format cjs,esm",
+    "test": "jest",
+    "test:update": "jest -u",
     "prepublishOnly": "npm run build",
     "release": "git-ensure --no-behind -b main --clean && bumpp --commit --tag --push"
+  },
+  "peerDependencies": {
+    "vite": "^2.0.0"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.0.6"
   },
-  "peerDependencies": {
-    "vite": "^2.0.0"
-  },
   "devDependencies": {
     "@antfu/eslint-config": "^0.6.4",
     "@antfu/ni": "^0.7.0",
+    "@types/jest": "^26.0.23",
     "@types/markdown-it": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "bumpp": "^6.0.6",
     "eslint": "^7.25.0",
+    "eslint-plugin-jest": "^24.3.6",
     "git-ensure": "^0.1.0",
+    "jest": "^26.6.3",
     "rollup": "^2.47.0",
     "standard-version": "^9.3.0",
+    "ts-jest": "^26.5.6",
     "tsup": "^4.10.1",
     "typescript": "^4.2.4",
     "vite": "^2.2.4"
