--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.7.0",
     "@antfu/ni": "^0.7.0",
+    "@rollup/pluginutils": "^4.1.1",
     "@types/jest": "^26.0.24",
     "@types/markdown-it": "^12.0.3",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
