--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,7 @@
     "prismjs": "^1.24.1",
     "typescript": "^4.3.5",
     "vite": "^2.5.0",
+    "vite-plugin-inspect": "^0.1.2",
     "vite-plugin-md": "workspace:*",
     "vite-plugin-pages": "^0.17.3"
   }
