--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "markdown-it": "^12.2.0"
+    "markdown-it": "^12.2.0",
+    "@rollup/pluginutils": "^4.1.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.7.0",
     "@antfu/ni": "^0.7.0",
-    "@rollup/pluginutils": "^4.1.1",
     "@types/jest": "^27.0.1",
     "@types/markdown-it": "^12.2.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
