--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.2.0",
-    "@rollup/pluginutils": "^4.1.1"
+    "@rollup/pluginutils": "^4.1.1",
+    "@types/markdown-it": "^12.2.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.7.0",
     "@antfu/ni": "^0.7.0",
     "@types/jest": "^27.0.1",
-    "@types/markdown-it": "^12.2.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "bumpp": "^6.0.6",
     "eslint": "^7.32.0",
