--- a/package.json
+++ b/package.json
@@ -36,26 +36,26 @@
     "vite": "^2.0.0"
   },
   "dependencies": {
-    "gray-matter": "^4.0.3",
-    "markdown-it": "^12.2.0",
     "@rollup/pluginutils": "^4.1.1",
-    "@types/markdown-it": "^12.2.0"
+    "@types/markdown-it": "^12.2.3",
+    "gray-matter": "^4.0.3",
+    "markdown-it": "^12.2.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.7.0",
-    "@antfu/ni": "^0.7.0",
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "bumpp": "^6.0.6",
-    "eslint": "^7.32.0",
-    "eslint-plugin-jest": "^24.4.0",
+    "@antfu/eslint-config": "^0.10.0",
+    "@antfu/ni": "^0.10.0",
+    "@types/jest": "^27.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "bumpp": "^7.1.1",
+    "eslint": "^8.0.1",
+    "eslint-plugin-jest": "^25.2.2",
     "git-ensure": "^0.1.0",
-    "jest": "^27.0.6",
-    "rollup": "^2.56.2",
-    "standard-version": "^9.3.1",
-    "ts-jest": "^27.0.4",
-    "tsup": "^4.14.0",
-    "typescript": "^4.3.5",
-    "vite": "^2.5.0"
+    "jest": "^27.3.1",
+    "rollup": "^2.58.0",
+    "standard-version": "^9.3.2",
+    "ts-jest": "^27.0.7",
+    "tsup": "^5.4.1",
+    "typescript": "^4.4.4",
+    "vite": "^2.6.10"
   }
 }
