--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "main": "dist/index.js",
   "module": "dist/index.mjs",
+  "exports": "./dist/index.mjs",
   "types": "dist/index.d.ts",
   "homepage": "https://github.com/antfu/vite-plugin-md",
   "bugs": "https://github.com/antfu/vite-plugin-md/issues",
