--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vite": "^2.0.0"
   },
   "dependencies": {
+    "@antfu/utils": "^0.3.0",
     "@rollup/pluginutils": "^4.1.1",
     "@types/markdown-it": "^12.2.3",
     "gray-matter": "^4.0.3",
