--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   ],
   "main": "dist/index.js",
   "module": "dist/index.mjs",
-  "exports": "./dist/index.mjs",
+  "exports": {
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.js"
+  },
   "types": "dist/index.d.ts",
   "homepage": "https://github.com/antfu/vite-plugin-md",
   "bugs": "https://github.com/antfu/vite-plugin-md/issues",
