chore: maintainance (see commit messages for details) (#33)
* chore: update license year

* refactor: use @antfu/utils & `import type`

* chore: relative paths in `package.json`

* chore: update license year to span till present

Co-authored-by: Anthony Fu <anthonyfu117@hotmail.com>

* chore: update license year to span till present

Co-authored-by: Anthony Fu <anthonyfu117@hotmail.com>

* chore: relative paths in `package.json`

Co-authored-by: Anthony Fu <anthonyfu117@hotmail.com>

--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   "files": [
     "dist"
   ],
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
   },
-  "types": "dist/index.d.ts",
+  "types": "./dist/index.d.ts",
   "homepage": "https://github.com/antfu/vite-plugin-md",
   "bugs": "https://github.com/antfu/vite-plugin-md/issues",
   "scripts": {
@@ -42,6 +42,7 @@
     "vite": "^2.0.0"
   },
   "dependencies": {
+    "@antfu/utils": "^0.3.0",
     "@rollup/pluginutils": "^4.1.1",
     "@types/markdown-it": "^12.2.3",
     "gray-matter": "^4.0.3",
