--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build": "tsup src/index.ts --dts --format cjs,esm",
     "test": "vitest",
     "test:update": "vitest -u",
+    "lint": "eslint \"**/*.{ts,vue,mjs}\"",
     "prepublishOnly": "npm run build",
     "release": "bumpp --commit --tag --push"
   },
@@ -42,23 +43,23 @@
     "vite": "^2.0.0"
   },
   "dependencies": {
-    "@antfu/utils": "^0.3.0",
+    "@antfu/utils": "^0.5.0",
     "@rollup/pluginutils": "^4.1.2",
     "@types/markdown-it": "^12.2.3",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^12.3.0"
+    "markdown-it": "^12.3.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.14.0",
+    "@antfu/eslint-config": "^0.16.1",
     "@antfu/ni": "^0.12.0",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
     "bumpp": "^7.1.1",
-    "eslint": "^8.5.0",
-    "jest": "^27.4.5",
-    "rollup": "^2.61.1",
-    "tsup": "^5.11.7",
-    "typescript": "^4.5.4",
-    "vite": "^2.7.6",
-    "vitest": "^0.0.110"
+    "eslint": "^8.8.0",
+    "jest": "^27.5.1",
+    "rollup": "^2.67.1",
+    "tsup": "^5.11.13",
+    "typescript": "^4.5.5",
+    "vite": "^2.7.13",
+    "vitest": "^0.2.8"
   }
 }
