reverted prettier and linter configuration

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test": "vitest",
     "test:update": "vitest -u",
     "lint": "eslint \"**/*.{ts,vue,mjs}\"",
+    "lint:fix": "eslint \"**/*.{ts,vue,mjs}\" --fix",
     "prepublishOnly": "npm run build",
     "release": "bumpp --commit --tag --push"
   },
