--- a/package.json
+++ b/package.json
@@ -49,27 +49,30 @@
     "@rollup/pluginutils": "^4.2.0",
     "@types/markdown-it": "^12.2.3",
     "@vue/runtime-core": "^3.2.31",
+    "fp-ts": "^2.11.9",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^12.3.2",
-    "vue-router": "^4.0.14"
+    "markdown-it": "^12.3.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.18.8",
+    "@antfu/eslint-config": "^0.18.9",
     "@antfu/ni": "^0.13.2",
     "@types/node": "^14.18.12",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "@vitest/ui": "^0.6.1",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "@vitest/ui": "^0.7.6",
     "@vue/test-utils": "^2.0.0-rc.18",
     "bumpp": "^7.1.1",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
-    "happy-dom": "^2.46.3",
-    "rollup": "^2.70.0",
+    "happy-dom": "^2.49.0",
+    "rollup": "^2.70.1",
     "tsup": "^5.12.1",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
-    "vitest": "^0.6.1",
-    "vue": "^3.2.31"
+    "vite-plugin-pages": "^0.22.0",
+    "vite-plugin-vue-layouts": "^0.6.0",
+    "vitest": "^0.7.6",
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14"
   }
 }
