--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "prepublishOnly": "npm run build",
     "release": "bumpp --commit --tag --push",
     "test": "vitest",
-    "test:ui": "vitest --ui -c test/vite.config.ts",
+    "test:ui": "vitest --ui",
     "test:update": "vitest -u"
   },
   "peerDependencies": {
@@ -48,30 +48,37 @@
     "@antfu/utils": "^0.5.0",
     "@rollup/pluginutils": "^4.2.0",
     "@types/markdown-it": "^12.2.3",
+    "@types/prismjs": "^1.26.0",
     "@vue/runtime-core": "^3.2.31",
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.3.2"
   },
+  "optionalDependencies": {
+    "prismjs": "^1.27.0",
+    "shiki": "^0.10.1"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.9",
-    "@antfu/ni": "^0.13.2",
-    "@types/node": "^17.0.22",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "@vitest/ui": "^0.7.7",
+    "@antfu/ni": "^0.14.0",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "@vitest/ui": "^0.8.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "bumpp": "^7.1.1",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "fp-ts": "^2.11.9",
-    "happy-dom": "^2.49.2",
+    "happy-dom": "^2.51.0",
+    "prismjs": "^1.27.0",
     "rollup": "^2.70.1",
+    "shiki": "^0.10.1",
     "tsup": "^5.12.1",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.3",
     "vite": "^2.8.6",
     "vite-plugin-pages": "^0.22.0",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vitest": "^0.7.7",
+    "vitest": "^0.8.0",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14"
   }
