--- a/package.json
+++ b/package.json
@@ -51,18 +51,16 @@
     "@types/prismjs": "^1.26.0",
     "@vue/runtime-core": "^3.2.33",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^12.3.2"
-  },
-  "optionalDependencies": {
+    "markdown-it": "^12.3.2",
     "prismjs": "^1.28.0",
     "shiki": "^0.10.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.20.6",
     "@antfu/ni": "^0.14.0",
-    "@types/node": "^17.0.24",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
+    "@types/node": "^17.0.25",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "@vitest/ui": "^0.9.3",
     "@vue/test-utils": "^2.0.0-rc.20",
     "bumpp": "^7.1.1",
