chore: mild DOM structure improvements in code layout

--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "@vitest/ui": "^0.9.3",
-    "@vue/test-utils": "^2.0.0-rc.20",
+    "@vitest/ui": "^0.9.4",
+    "@vue/test-utils": "^2.0.0-rc.21",
     "bumpp": "^7.1.1",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
@@ -71,12 +71,13 @@
     "prismjs": "^1.27.0",
     "rollup": "^2.70.2",
     "shiki": "^0.10.1",
-    "tsup": "^5.12.5",
+    "tsup": "^5.12.6",
     "typescript": "^4.6.3",
+    "unocss": "^0.31.12",
     "vite": "^2.9.5",
     "vite-plugin-pages": "^0.23.0",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vitest": "^0.9.3",
+    "vitest": "^0.9.4",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   }
