--- a/example/package.json
+++ b/example/package.json
@@ -1,10 +1,11 @@
 {
   "private": true,
   "scripts": {
-    "dev": "cross-env DEBUG=vite-plugin-md:* vite",
-    "build": "cross-env DEBUG=vite-plugin-md:* vite build"
+    "build": "cross-env DEBUG=vite-plugin-md:* vite build",
+    "dev": "cross-env DEBUG=vite-plugin-md:* vite"
   },
   "dependencies": {
+    "@vueuse/core": "^8.3.1",
     "@vueuse/head": "^0.7.6",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
@@ -16,9 +17,15 @@
     "markdown-it-prism": "^2.2.4",
     "prismjs": "^1.28.0",
     "typescript": "^4.6.3",
+    "unocss": "^0.31.13",
+    "unplugin-auto-import": "^0.7.1",
+    "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
-    "vite-plugin-inspect": "^0.4.3",
+    "vite-plugin-inspect": "^0.5.0",
     "vite-plugin-md": "workspace:*",
-    "vite-plugin-pages": "^0.22.0"
+    "vite-plugin-pages": "^0.23.0",
+    "vite-plugin-vue-layouts": "^0.6.0",
+    "vite-ssg": "^0.19.2",
+    "vue-tsc": "^0.34.10"
   }
 }
