--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-md",
-  "version": "0.12.4",
+  "version": "0.13.0",
   "description": "Markdown for Vite",
   "keywords": [
     "vite",
@@ -9,27 +9,28 @@
   ],
   "homepage": "https://github.com/antfu/vite-plugin-md",
   "bugs": "https://github.com/antfu/vite-plugin-md/issues",
-  "license": "MIT",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "repository": {
     "type": "git",
     "url": "https://github.com/antfu/vite-plugin-md"
   },
   "funding": "https://github.com/sponsors/antfu",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "license": "MIT",
+  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "build": "tsup src/index.ts --dts --format cjs,esm",
+    "watch": "tsup src/index.ts --dts --format cjs,esm --watch",
     "dev": "npm run build -- --watch",
     "example:build": "cp README.md example/README.md && npm -C example run build",
     "example:dev": "cp README.md example/README.md && npm -C example run dev",
@@ -41,22 +42,23 @@
     "test:ui": "vitest --ui",
     "test:update": "vitest -u"
   },
-  "peerDependencies": {
-    "vite": "^2.0.0"
-  },
   "dependencies": {
     "@antfu/utils": "^0.5.1",
     "@rollup/pluginutils": "^4.2.1",
     "@types/markdown-it": "^12.2.3",
     "@types/prismjs": "^1.26.0",
+    "@vitejs/plugin-vue": "^2.3.1",
     "@vue/runtime-core": "^3.2.33",
+    "fp-ts": "^2.12.0",
     "gray-matter": "^4.0.3",
+    "happy-dom": "^2.55.0",
     "markdown-it": "^12.3.2",
     "prismjs": "^1.28.0",
-    "shiki": "^0.10.1"
+    "shiki": "^0.10.1",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.20.6",
+    "@antfu/eslint-config": "^0.20.7",
     "@antfu/ni": "^0.14.0",
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
@@ -64,21 +66,20 @@
     "@vitest/ui": "^0.9.4",
     "@vue/test-utils": "^2.0.0-rc.21",
     "bumpp": "^7.1.1",
-    "eslint": "^8.13.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
-    "fp-ts": "^2.11.10",
-    "happy-dom": "^2.55.0",
-    "prismjs": "^1.27.0",
     "rollup": "^2.70.2",
     "shiki": "^0.10.1",
     "tsup": "^5.12.6",
     "typescript": "^4.6.3",
-    "unocss": "^0.31.12",
+    "unocss": "^0.31.13",
     "vite": "^2.9.5",
     "vite-plugin-pages": "^0.23.0",
     "vite-plugin-vue-layouts": "^0.6.0",
     "vitest": "^0.9.4",
-    "vue": "^3.2.33",
-    "vue-router": "^4.0.14"
+    "vue": "^3.2.33"
+  },
+  "peerDependencies": {
+    "vite": "^2.0.0"
   }
 }
