test: added tests to the last v11 release for better regression testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
   "prettier.enable": false,
-  "prettier": false
+  "prettier": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
+  "eslint.validate": [
+    "typescript"
+  ]
 }
