--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "module": "./dist/index.mjs",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
     }
   },
   "types": "./dist/index.d.ts",
@@ -54,6 +54,7 @@
     "@antfu/eslint-config": "^0.16.1",
     "@antfu/ni": "^0.13.2",
     "@types/node": "^14.18.12",
+    "@vitest/ui": "^0.9.4",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "@vue/test-utils": "^2.0.0-rc.18",
@@ -64,6 +65,7 @@
     "tsup": "^5.12.0",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
-    "vitest": "^0.6.0"
+    "vitest": "^0.9.4",
+    "vue": "^3.2.33"
   }
 }
