--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-md",
-  "version": "0.13.0",
+  "version": "0.13.1",
   "description": "Markdown for Vite",
   "keywords": [
     "vite",
@@ -41,7 +41,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:update": "vitest -u",
-    "test:component": "cypress open"
+    "test:component": "npx cypress open-ct -p 4000"
   },
   "peerDependencies": {
     "vite": "^2.9.0"
@@ -52,7 +52,7 @@
     "@types/markdown-it": "^12.2.3",
     "@types/prismjs": "^1.26.0",
     "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/runtime-core": "^3.2.33",
+    "@vue/runtime-core": "^3.2.36",
     "@vueuse/core": "^8.5.0",
     "cypress-types": "^0.1.0",
     "fp-ts": "^2.12.1",
@@ -68,26 +68,27 @@
     "@antfu/ni": "^0.16.2",
     "@cypress/vite-dev-server": "^2.2.3",
     "@cypress/vue": "^3.1.2",
-    "@types/node": "^17.0.34",
-    "@typescript-eslint/eslint-plugin": "^5.24.0",
-    "@typescript-eslint/parser": "^5.24.0",
+    "@types/node": "^17.0.35",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vitest/ui": "^0.12.6",
-    "@vue/test-utils": "^2.0.0-rc.21",
+    "@vitest/ui": "^0.12.9",
+    "@vue/test-utils": "^2.0.0",
     "bumpp": "^7.1.1",
+    "c8": "^7.11.3",
     "callsites": "^3.1.0",
-    "cypress": "^9.6.1",
-    "eslint": "^8.15.0",
+    "cypress": "^9.7.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
-    "rollup": "^2.73.0",
+    "rollup": "^2.74.1",
     "shiki": "^0.10.1",
     "tsup": "^5.12.8",
     "typescript": "^4.6.4",
-    "unocss": "^0.33.5",
+    "unocss": "^0.34.1",
     "vite": "^2.9.9",
     "vite-plugin-pages": "^0.23.0",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vitest": "^0.12.6",
-    "vue": "^3.2.33"
+    "vitest": "^0.12.9",
+    "vue": "^3.2.36"
   }
 }
