--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "skipLibCheck": true,
     
   },
-  "include": ["src", "test" ],
+  "include": ["src", "test", "vite.config.ts" ],
   "exclude": [
     "**/dist",
     "**/node_modules"
