chore: lint check/fiix, update happy-dom

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,10 @@
     "strictNullChecks": true,
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "skipLibCheck": true,
-    
+    "skipLibCheck": true
+
   },
-  "include": ["src", "test", "vite.config.ts" ],
+  "include": ["src", "test", "vite.config.ts"],
   "exclude": [
     "**/dist",
     "**/node_modules"
