chore: added build dependency to build happy-wrapper

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --dts --format cjs,esm",
+    "build": "run-s build:happy-wrapper build:core",
+    "build:core": "tsup src/index.ts --dts --format cjs,esm",
+    "build:happy-wrapper": "pnpm --filter 'happy-wrapper' build",
     "watch": "tsup src/index.ts --dts --format cjs,esm --watch",
     "dev": "npm run build -- --watch",
     "example:build": "cp README.md example/README.md && npm -C example run build",
@@ -74,12 +76,14 @@
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vitest/ui": "^0.12.9",
     "@vue/test-utils": "^2.0.0",
+    "add": "^2.0.6",
     "bumpp": "^7.1.1",
     "c8": "^7.11.3",
     "callsites": "^3.1.0",
     "cypress": "^9.7.0",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
+    "npm-run-all": "^4.1.5",
     "rollup": "^2.74.1",
     "shiki": "^0.10.1",
     "tsup": "^5.12.8",
