--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
+    "pathe": "^0.3.0",
     "rollup": "^2.74.1",
     "shiki": "^0.10.1",
     "tsup": "^5.12.8",
