--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-md",
-  "version": "0.13.1",
+  "version": "0.14.0",
   "description": "Markdown for Vite",
   "keywords": [
     "vite",
@@ -44,7 +44,7 @@
     "test:component": "npx cypress open-ct -p 4000"
   },
   "peerDependencies": {
-    "vite": "^2.9.0"
+    "vite": "^2.9.9"
   },
   "dependencies": {
     "@antfu/utils": "^0.5.2",
@@ -61,6 +61,7 @@
     "happy-dom": "^3.2.2",
     "markdown-it": "^13.0.1",
     "prismjs": "^1.28.0",
+    "vite-plugin-md": "^0.13.1",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
