--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/runtime-core": "^3.2.37",
     "@vueuse/core": "^8.6.0",
-    "@yankeeinlondon/happy-wrapper": "1.0.0",
+    "@yankeeinlondon/happy-wrapper": "^2.0.0",
     "cypress-types": "^0.1.0",
     "fp-ts": "^2.12.1",
     "gray-matter": "^4.0.3",
@@ -73,7 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vitest/ui": "^0.14.1",
+    "@vitest/ui": "^0.14.2",
     "@vue/test-utils": "^2.0.0",
     "add": "^2.0.6",
     "bumpp": "^7.1.1",
@@ -83,16 +83,15 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
-    "pathe": "^0.3.0",
     "rollup": "^2.75.6",
-    "shiki": "^0.10.1",
-    "tsup": "^6.1.0",
+    "pathe": "^0.3.0",
+    "tsup": "^6.1.2",
     "typescript": "^4.7.3",
     "unocss": "^0.38.2",
-    "vite": "^2.9.10",
+    "vite": "^2.9.12",
     "vite-plugin-pages": "^0.23.0",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vitest": "^0.14.1",
+    "vitest": "^0.14.2",
     "vue": "^3.2.37"
   }
 }
