--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "happy-dom": "^5.2.0",
     "markdown-it": "^13.0.1",
     "prismjs": "^1.28.0",
+    "ts-morph": "^15.1.0",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
@@ -83,8 +84,8 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.75.6",
     "pathe": "^0.3.0",
+    "rollup": "^2.75.6",
     "tsup": "^6.1.2",
     "typescript": "^4.7.3",
     "unocss": "^0.38.2",
