--- a/package.json
+++ b/package.json
@@ -48,51 +48,50 @@
     "vite": "^2.9.0"
   },
   "dependencies": {
-    "@antfu/utils": "^0.5.2",
     "@rollup/pluginutils": "^4.2.1",
-    "@types/markdown-it": "^12.2.3",
-    "@types/prismjs": "^1.26.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/runtime-core": "^3.2.37",
-    "@vueuse/core": "^8.6.0",
     "@yankeeinlondon/happy-wrapper": "1.0.0",
-    "cypress-types": "^0.1.0",
     "fp-ts": "^2.12.1",
     "gray-matter": "^4.0.3",
-    "happy-dom": "^5.2.0",
-    "markdown-it": "^13.0.1",
-    "prismjs": "^1.28.0",
-    "vue-router": "^4.0.16"
+    "markdown-it": "^13.0.1"
   },
   "devDependencies": {
+    "@antfu/utils": "^0.5.2",
     "@antfu/eslint-config": "^0.25.1",
     "@antfu/ni": "^0.16.2",
     "@cypress/vite-dev-server": "^2.2.3",
     "@cypress/vue": "^3.1.2",
-    "@types/node": "^17.0.41",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
+    "@types/markdown-it": "^12.2.3",
+    "@types/node": "^18.0.0",
+    "@types/prismjs": "^1.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vitest/ui": "^0.14.1",
-    "@vue/test-utils": "^2.0.0",
+    "@vitest/ui": "^0.15.1",
+    "@vue/runtime-core": "^3.2.37",
+    "@vue/test-utils": "^2.0.1",
+    "@vueuse/core": "^8.7.3",
     "add": "^2.0.6",
-    "bumpp": "^7.1.1",
+    "bumpp": "^8.2.0",
     "c8": "^7.11.3",
     "callsites": "^3.1.0",
     "cypress": "^9.7.0",
+    "prismjs": "^1.28.0",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
+    "happy-dom": "^5.3.1",
     "npm-run-all": "^4.1.5",
     "pathe": "^0.3.0",
     "rollup": "^2.75.6",
     "shiki": "^0.10.1",
-    "tsup": "^6.1.0",
+    "tsup": "^6.1.2",
     "typescript": "^4.7.3",
-    "unocss": "^0.38.2",
-    "vite": "^2.9.10",
-    "vite-plugin-pages": "^0.23.0",
+    "unocss": "^0.39.0",
+    "vite": "^2.9.12",
+    "vite-plugin-pages": "^0.24.1",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vitest": "^0.14.1",
-    "vue": "^3.2.37"
+    "vitest": "^0.15.1",
+    "vue": "^3.2.37",
+    "vue-router": "^4.0.16"
   }
 }
