--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "@yankeeinlondon/happy-wrapper": "1.0.0",
     "fp-ts": "^2.12.1",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^13.0.1"
+    "markdown-it": "^13.0.1",
+    "prismjs": "^1.28.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.1",
@@ -81,7 +82,6 @@
     "happy-dom": "^5.3.1",
     "npm-run-all": "^4.1.5",
     "pathe": "^0.3.0",
-    "prismjs": "^1.28.0",
     "rollup": "^2.75.6",
     "shiki": "^0.10.1",
     "tsup": "^6.1.2",
