fix: fixed script-hoisting to ensure any additional "<script setup>" blocks lines are brought into the singular block and in an order which ensures imports are first
refactor: restructured some of the later stage block names in the builder pipeline to improve code readability and allow better testing

chore: started to add "component tests" section which uses happy-dom; removed cypress for now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,25 @@
     "strictNullChecks": true,
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "skipLibCheck": true
-
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "src/*"
+      ],
+      "~/fixtures/*": [
+        "test/fixtures/*"
+      ],
+      "~/utils/*": [
+        "test/utils/*"
+      ]
+    }
   },
-  "include": ["src", "test", "vite.config.ts"],
+  "include": [
+    "src",
+    "test",
+    "vite.config.ts"
+  ],
   "exclude": [
     "**/dist",
     "**/node_modules"
