test: added testing for styles (or lack thereof)
chore: make sure user can set styles but that default is always to NOT have styles

test: add more component tests that test the end-state of being able to import frontmatter and excerpt variables

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "release": "bumpp",
     "test": "vitest",
     "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
     "test:update": "vitest -u",
     "test:component": "npx cypress open-ct -p 4000"
   },
