--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "test:component": "npx cypress open-ct -p 4000"
   },
   "peerDependencies": {
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "markdown-it": "^13.0.1"
   },
   "dependencies": {
     "@rollup/pluginutils": "^4.2.1",
@@ -56,15 +57,14 @@
     "@vue/runtime-core": "^3.2.37",
     "@vueuse/core": "^8.7.4",
     "@yankeeinlondon/happy-wrapper": "^2.1.0",
+    "@yankeeinlondon/meta-builder": "^1.0.0-alpha.1",
     "gray-matter": "^4.0.3",
     "happy-dom": "^5.3.1",
-    "markdown-it": "^13.0.1",
     "prismjs": "^1.28.0",
     "source-map-js": "^1.0.2",
     "ts-morph": "^15.1.0"
   },
   "devDependencies": {
-    "fp-ts": "^2.12.1",
     "@antfu/eslint-config": "^0.25.1",
     "@antfu/ni": "^0.16.2",
     "@antfu/utils": "^0.5.2",
@@ -79,12 +79,14 @@
     "@vue/runtime-core": "^3.2.37",
     "@vue/test-utils": "^2.0.1",
     "@vueuse/core": "^8.7.3",
+    "markdown-it": "^13.0.1",
     "add": "^2.0.6",
     "bumpp": "^8.2.1",
     "c8": "^7.11.3",
     "callsites": "^3.1.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
+    "fp-ts": "^2.12.1",
     "npm-run-all": "^4.1.5",
     "pathe": "^0.3.0",
     "prismjs": "^1.28.0",
