--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "test:component": "npx cypress open-ct -p 4000"
   },
   "peerDependencies": {
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "markdown-it": "^13.0.1"
   },
   "dependencies": {
     "@rollup/pluginutils": "^4.2.1",
@@ -58,7 +59,6 @@
     "@yankeeinlondon/happy-wrapper": "^2.1.0",
     "gray-matter": "^4.0.3",
     "happy-dom": "^5.3.1",
-    "markdown-it": "^13.0.1",
     "prismjs": "^1.28.0",
     "source-map-js": "^1.0.2",
     "ts-morph": "^15.1.0"
@@ -86,6 +86,7 @@
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
+    "markdown-it": "^13.0.1",
     "pathe": "^0.3.0",
     "prismjs": "^1.28.0",
     "rollup": "^2.75.7",
