refactor: removed the code builder source and expose it via an import instead

--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
   "name": "vite-plugin-md",
   "version": "0.17.2",
-  "packageManager": "pnpm@7.1.7",
   "description": "Markdown for Vite",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
-  "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/vite-plugin-md",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/antfu/vite-plugin-md"
-  },
-  "bugs": "https://github.com/antfu/vite-plugin-md/issues",
   "keywords": [
     "vite",
     "vite-plugin",
     "markdown-it"
   ],
+  "homepage": "https://github.com/antfu/vite-plugin-md",
+  "bugs": "https://github.com/antfu/vite-plugin-md/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/antfu/vite-plugin-md"
+  },
+  "funding": "https://github.com/sponsors/antfu",
+  "license": "MIT",
+  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "require": "./dist/index.js",
       "import": "./dist/index.mjs"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/index.d.ts",
+        "./dist/*"
+      ]
     }
   },
   "main": "./dist/index.js",
@@ -45,29 +53,18 @@
     "test:update": "vitest -u",
     "test:component": "npx cypress open-ct -p 4000"
   },
-  "peerDependencies": {
-    "vite": "^2.9.9",
-    "markdown-it": "^13.0.1"
-  },
   "dependencies": {
-    "@rollup/pluginutils": "^4.2.1",
-    "@types/markdown-it": "^12.2.3",
-    "@types/prismjs": "^1.26.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/runtime-core": "^3.2.37",
-    "@vueuse/core": "^8.7.4",
-    "@yankeeinlondon/happy-wrapper": "^2.1.0",
+    "@yankeeinlondon/code-builder": "^1.0.0-alpha.1",
+    "@yankeeinlondon/link-builder": "^1.0.0-alpha.1",
     "@yankeeinlondon/meta-builder": "^1.0.0-alpha.1",
     "gray-matter": "^4.0.3",
-    "happy-dom": "^5.3.1",
-    "prismjs": "^1.28.0",
-    "source-map-js": "^1.0.2",
-    "ts-morph": "^15.1.0"
+    "source-map-js": "^1.0.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.1",
     "@antfu/ni": "^0.16.2",
     "@antfu/utils": "^0.5.2",
+    "@rollup/pluginutils": "^4.2.1",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.0.0",
     "@types/prismjs": "^1.26.0",
@@ -79,18 +76,18 @@
     "@vue/runtime-core": "^3.2.37",
     "@vue/test-utils": "^2.0.1",
     "@vueuse/core": "^8.7.3",
-    "markdown-it": "^13.0.1",
-    "add": "^2.0.6",
+    "@yankeeinlondon/happy-wrapper": "^2.1.0",
     "bumpp": "^8.2.1",
     "c8": "^7.11.3",
     "callsites": "^3.1.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
+    "esno": "^0.16.3",
     "fp-ts": "^2.12.1",
-    "npm-run-all": "^4.1.5",
+    "happy-dom": "^5.3.1",
     "markdown-it": "^13.0.1",
+    "npm-run-all": "^4.1.5",
     "pathe": "^0.3.0",
-    "prismjs": "^1.28.0",
     "rollup": "^2.75.7",
     "tsup": "^6.1.2",
     "typescript": "^4.7.4",
@@ -101,5 +98,17 @@
     "vitest": "^0.15.1",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
-  }
+  },
+  "peerDependencies": {
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@yankeeinlondon/code-builder": "^1.0.0-alpha.1",
+    "@yankeeinlondon/happy-wrapper": "^2.1.0",
+    "@yankeeinlondon/link-builder": "^1.0.0-alpha.1",
+    "@yankeeinlondon/meta-builder": "^1.0.0-alpha.1",
+    "happy-dom": "^5.3.1",
+    "markdown-it": "^13.0.1",
+    "vite": "^2.9.9",
+    "vue": "^3.2.37"
+  },
+  "packageManager": "pnpm@7.1.7"
 }
