--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "test:component": "npx cypress open-ct -p 4000"
   },
   "peerDependencies": {
-    "vite": "^2.9.9",
-    "markdown-it": "^13.0.1"
+    "markdown-it": "^13.0.1",
+    "vite": "^2.9.9"
   },
   "dependencies": {
     "@rollup/pluginutils": "^4.2.1",
@@ -55,15 +55,14 @@
     "@types/prismjs": "^1.26.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/runtime-core": "^3.2.37",
-    "@vueuse/core": "^8.7.4",
-    "@yankeeinlondon/happy-wrapper": "^2.1.0",
+    "@vueuse/core": "^8.7.5",
+    "@yankeeinlondon/happy-wrapper": "^2.3.0",
     "gray-matter": "^4.0.3",
     "happy-dom": "^5.3.1",
     "source-map-js": "^1.0.2",
     "ts-morph": "^15.1.0"
   },
   "devDependencies": {
-    "fp-ts": "^2.12.1",
     "@antfu/eslint-config": "^0.25.1",
     "@antfu/ni": "^0.16.2",
     "@antfu/utils": "^0.5.2",
@@ -74,7 +73,7 @@
     "@typescript-eslint/parser": "^5.29.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vitest/ui": "^0.15.1",
+    "@vitest/ui": "^0.15.2",
     "@vue/runtime-core": "^3.2.37",
     "@vue/test-utils": "^2.0.1",
     "@vueuse/core": "^8.7.3",
@@ -84,8 +83,9 @@
     "callsites": "^3.1.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
-    "npm-run-all": "^4.1.5",
+    "fp-ts": "^2.12.1",
     "markdown-it": "^13.0.1",
+    "npm-run-all": "^4.1.5",
     "pathe": "^0.3.0",
     "prismjs": "^1.28.0",
     "rollup": "^2.75.7",
@@ -95,7 +95,7 @@
     "vite": "^2.9.12",
     "vite-plugin-pages": "^0.24.2",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vitest": "^0.15.1",
+    "vitest": "^0.15.2",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   }
