--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js"
     }
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "type": "module",
   "typesVersions": {
     "*": {
       "*": [
@@ -55,9 +56,9 @@
     "test:component": "npx cypress open-ct -p 4000"
   },
   "dependencies": {
-    "@yankeeinlondon/code-builder": "^1.0.0-alpha.3",
-    "@yankeeinlondon/link-builder": "^1.0.0-alpha.2",
-    "@yankeeinlondon/meta-builder": "^1.0.0-alpha.2",
+    "@yankeeinlondon/code-builder": "^1.0.0-beta.7",
+    "@yankeeinlondon/link-builder": "^1.0.0-beta.1",
+    "@yankeeinlondon/meta-builder": "^1.0.0-beta.1",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
     "source-map-js": "^1.0.2"
@@ -74,11 +75,11 @@
     "@typescript-eslint/parser": "^5.29.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vitest/ui": "^0.15.1",
+    "@vitest/ui": "^0.15.2",
     "@vue/runtime-core": "^3.2.37",
     "@vue/test-utils": "^2.0.1",
-    "@vueuse/core": "^8.7.3",
-    "@yankeeinlondon/happy-wrapper": "^2.1.0",
+    "@vueuse/core": "^8.7.5",
+    "@yankeeinlondon/happy-wrapper": "^2.2.0",
     "bumpp": "^8.2.1",
     "c8": "^7.11.3",
     "callsites": "^3.1.0",
@@ -96,7 +97,7 @@
     "vite": "^2.9.12",
     "vite-plugin-pages": "^0.24.2",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vitest": "^0.15.1",
+    "vitest": "^0.15.2",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
