--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --dts --format cjs,esm",
+    "build": "tsup src/index.ts --dts --format cjs,esm --clean",
     "watch": "tsup src/index.ts --dts --format cjs,esm --watch",
     "dev": "npm run build -- --watch",
     "example:build": "cp README.md example/README.md && npm -C example run build",
@@ -47,18 +47,17 @@
   },
   "peerDependencies": {
     "markdown-it": "^13.0.1",
+    "happy-dom": "^5.3.1",
+    "prismjs": "^1.28.0",
     "vite": "^2.9.9"
   },
   "dependencies": {
     "@rollup/pluginutils": "^4.2.1",
     "@types/markdown-it": "^12.2.3",
-    "@types/prismjs": "^1.26.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/runtime-core": "^3.2.37",
     "@vueuse/core": "^8.7.5",
-    "@yankeeinlondon/happy-wrapper": "^2.3.0",
     "gray-matter": "^4.0.3",
-    "happy-dom": "^5.3.1",
     "source-map-js": "^1.0.2",
     "ts-morph": "^15.1.0"
   },
@@ -66,7 +65,6 @@
     "@antfu/eslint-config": "^0.25.1",
     "@antfu/ni": "^0.16.2",
     "@antfu/utils": "^0.5.2",
-    "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.0.0",
     "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -77,9 +75,11 @@
     "@vue/runtime-core": "^3.2.37",
     "@vue/test-utils": "^2.0.1",
     "@vueuse/core": "^8.7.3",
+    "@yankeeinlondon/happy-wrapper": "^2.3.0",
     "add": "^2.0.6",
     "bumpp": "^8.2.1",
     "c8": "^7.11.3",
+    "happy-dom": "^5.3.1",
     "callsites": "^3.1.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
