--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
   },
   "peerDependencies": {
     "@rollup/pluginutils": "^4.2.1",
-    "@vitejs/plugin-vue": "^3.0.1"
+    "@vitejs/plugin-vue": "^3.0.1",
+    "rollup": "^2.75.6"
   },
   "dependencies": {
     "@yankeeinlondon/code-builder": "1.0.0",
@@ -87,7 +88,6 @@
     "eslint-config-prettier": "^8.5.0",
     "fp-ts": "^2.12.1",
     "npm-run-all": "^4.1.5",
-    "picomatch": "^2.3.1",
     "rollup": "^2.77.0",
     "tsup": "^6.1.3",
     "typescript": "^4.7.4",
