--- a/package.json
+++ b/package.json
@@ -54,12 +54,11 @@
     "rollup": "^2.75.6"
   },
   "dependencies": {
-    "@yankeeinlondon/happy-wrapper": "^2.4.0",
-    "gray-matter": "github:yankeeinlondon/gray-matter",
-    "happy-dom": "^6.0.4",
-    "markdown-it": "^13.0.1",
     "@rollup/pluginutils": "^4.2.1",
-    "pathe": "^0.3.2",
+    "@yankeeinlondon/builder-api": "^0.3.1",
+    "@yankeeinlondon/happy-wrapper": "^2.4.0",
+    "gray-matter": "^4.0.3",
+    "markdown-it": "^13.0.1",
     "source-map-js": "^1.0.2"
   },
   "devDependencies": {
@@ -69,8 +68,7 @@
     "@rollup/pluginutils": "^4.2.1",
     "@type-challenges/utils": "^0.1.1",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^18.0.6",
-    "@types/prismjs": "^1.26.0",
+    "@types/node": "16",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "@vitejs/plugin-vue": "^3.0.1",
@@ -84,7 +82,9 @@
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "fp-ts": "^2.12.1",
+    "happy-dom": "^6.0.4",
     "npm-run-all": "^4.1.5",
+    "pathe": "^0.3.2",
     "rollup": "^2.77.0",
     "tsup": "^6.1.3",
     "typescript": "^4.7.4",
