chore: temporarily force no-frozen-lockfile

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm i -g pnpm@7.5.2 @antfu/ni
       - name: Install
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
       - name: Test
         run: nr test --if-present
       - name: Build
