chore: remove prepublish step which is now failing due to pnpm issue

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,9 @@ jobs:
       - name: Test
         run: nr test --if-present
       - name: Build
-        run: nr build
-      - run: npm publish --access public
+        run: pnpm build
+      - name: Publish to NPM
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - run: npx changelogithub
