chore: fix broken link in example app

--- a/example/package.json
+++ b/example/package.json
@@ -7,29 +7,29 @@
   },
   "dependencies": {
     "@vueuse/core": "^8.9.4",
-    "@vueuse/head": "^0.7.6",
-    "@yankeeinlondon/code-builder": "^1.0.3",
-    "@yankeeinlondon/link-builder": "^1.0.2",
-    "@yankeeinlondon/meta-builder": "^1.0.2",
+    "@vueuse/head": "^0.7.7",
+    "@yankeeinlondon/code-builder": "^1.0.6",
+    "@yankeeinlondon/link-builder": "^1.0.4",
+    "@yankeeinlondon/meta-builder": "^1.0.5",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
-    "@iconify/json": "^2.1.81",
-    "@unocss/preset-wind": "^0.44.5",
+    "@iconify/json": "^2.1.84",
+    "@unocss/preset-wind": "^0.44.7",
     "@vitejs/plugin-vue": "^3.0.1",
-    "@yankeeinlondon/happy-wrapper": "^2.4.0",
+    "@yankeeinlondon/happy-wrapper": "^2.5.0",
     "cross-env": "^7.0.3",
     "typescript": "^4.7.4",
-    "unocss": "^0.44.5",
-    "unplugin-auto-import": "^0.10.0",
-    "unplugin-vue-components": "^0.21.1",
-    "vite": "^3.0.2",
+    "unocss": "^0.44.7",
+    "unplugin-auto-import": "^0.10.2",
+    "unplugin-vue-components": "^0.21.2",
+    "vite": "^3.0.3",
     "vite-plugin-inspect": "^0.6.0",
-    "vite-plugin-md": "workspace:*",
+    "vite-plugin-md": "workspace:0.20.0",
     "vite-plugin-pages": "^0.25.0",
-    "vite-plugin-vue-layouts": "^0.6.0",
+    "vite-plugin-vue-layouts": "^0.7.0",
     "vite-ssg": "^0.20.2",
-    "vue-tsc": "^0.39.0"
+    "vue-tsc": "^0.39.2"
   }
 }
