--- a/example/package.json
+++ b/example/package.json
@@ -6,30 +6,30 @@
     "dev": "cross-env DEBUG=vite-plugin-md:* vite"
   },
   "dependencies": {
-    "@vueuse/core": "^8.9.4",
-    "@vueuse/head": "^0.7.7",
-    "@yankeeinlondon/code-builder": "^1.0.6",
-    "@yankeeinlondon/link-builder": "^1.0.4",
-    "@yankeeinlondon/meta-builder": "^1.0.5",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "@vueuse/core": "^9.6.0",
+    "@vueuse/head": "^1.0.22",
+    "@yankeeinlondon/code-builder": "^1.1.4",
+    "@yankeeinlondon/link-builder": "^1.1.4",
+    "@yankeeinlondon/meta-builder": "^1.1.4",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@iconify/json": "^2.1.84",
-    "@unocss/preset-wind": "^0.44.7",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@yankeeinlondon/happy-wrapper": "^2.5.0",
+    "@iconify/json": "^2.1.151",
+    "@unocss/preset-wind": "^0.47.6",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@yankeeinlondon/happy-wrapper": "^2.10.1",
     "cross-env": "^7.0.3",
-    "typescript": "^4.7.4",
-    "unocss": "^0.44.7",
-    "unplugin-auto-import": "^0.10.2",
-    "unplugin-vue-components": "^0.21.2",
-    "vite": "^3.0.3",
-    "vite-plugin-inspect": "^0.6.0",
-    "vite-plugin-md": "workspace:*",
-    "vite-plugin-pages": "^0.25.0",
+    "typescript": "^4.9.4",
+    "unocss": "^0.47.6",
+    "unplugin-auto-import": "^0.12.1",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^3.2.5",
+    "vite-plugin-inspect": "^0.7.10",
+    "vite-plugin-md": "workspace:0.20.4",
+    "vite-plugin-pages": "^0.28.0",
     "vite-plugin-vue-layouts": "^0.7.0",
-    "vite-ssg": "^0.20.2",
-    "vue-tsc": "^0.39.2"
+    "vite-ssg": "^0.22.1",
+    "vue-tsc": "^1.0.13"
   }
 }
